fixing overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -12,14 +12,17 @@ body, html {
   line-height: 1.4;
   background-color: #282c34;
   height: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
   /* overflow-x: hidden;
   overflow-y: scroll; */
 }
 
 #root { 
   border: 3px solid #c04df9;
-  /* overflow-x: hidden; */
-  overflow-y: scroll;
+  
+  
+  
 }
 
 a, li, ul {
